// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WarningsView displays nothing if no notifications 1`] = `<div />`;

exports[`WarningsView does display a warning 1`] = `
<div>
  <div
    class="sc-gFqAkR gOzEic"
  />
</div>
`;

exports[`WarningsView does display a warning for GQL status codes 1`] = `
<div>
  <div
    class="sc-gFqAkR gOzEic"
  >
    <div
      class="sc-ikkxIA fIAnyP"
    >
      <div
        class="sc-dAbbOL eeoIeq"
      >
        <div
          class="sc-fHjqPf sc-hmdomO iBjCQK eugTIX"
        >
          WARNING
        </div>
        <h4
          class="sc-bmzYkS"
        >
          03N90: Cartesian product
        </h4>
      </div>
      <div
        class="sc-feUZmu"
      >
        <div
          class="sc-dAbbOL eeoIeq"
        >
          The disconnected pattern 'p = ()--(), q = ()--()' builds a cartesian product. A cartesian product may produce a large amount of data and slow down query processing.
        </div>
        <div
          class="sc-feUZmu"
        >
          <pre
            class="sc-kOHTFB cZhciy"
          >
            MATCH p=()--(), q=()--() RETURN p, q
            <br
              class="sc-dtBdUo"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`WarningsView does display multiple warnings 1`] = `
<div>
  <div
    class="sc-gFqAkR gOzEic"
  />
</div>
`;

exports[`WarningsView does display multiple warnings for GQL status codes 1`] = `
<div>
  <div
    class="sc-gFqAkR gOzEic"
  >
    <div
      class="sc-ikkxIA fIAnyP"
    >
      <div
        class="sc-dAbbOL eeoIeq"
      >
        <div
          class="sc-fHjqPf sc-hmdomO iBjCQK eugTIX"
        >
          WARNING
        </div>
        <h4
          class="sc-bmzYkS"
        >
          03N90: Cartesian product
        </h4>
      </div>
      <div
        class="sc-feUZmu"
      >
        <div
          class="sc-dAbbOL eeoIeq"
        >
          The disconnected pattern 'p = ()--(), q = ()--()' builds a cartesian product. A cartesian product may produce a large amount of data and slow down query processing.
        </div>
        <div
          class="sc-feUZmu"
        >
          <pre
            class="sc-kOHTFB cZhciy"
          >
            MATCH p=()--(), q=()--() RETURN p, q
            <br
              class="sc-dtBdUo"
            />
                   
            ^
          </pre>
        </div>
      </div>
    </div>
    <div
      class="sc-ikkxIA fIAnyP"
    >
      <div
        class="sc-dAbbOL eeoIeq"
      >
        <div
          class="sc-fHjqPf sc-hmdomO iBjCQK eugTIX"
        >
          WARNING
        </div>
        <h4
          class="sc-bmzYkS"
        >
          01N50: Label does not exist
        </h4>
      </div>
      <div
        class="sc-feUZmu"
      >
        <div
          class="sc-dAbbOL eeoIeq"
        >
          The label \`A\` does not exist. Verify that the spelling is correct.
        </div>
        <div
          class="sc-feUZmu"
        >
          <pre
            class="sc-kOHTFB cZhciy"
          >
            MATCH p=()--(), q=()--() RETURN p, q
            <br
              class="sc-dtBdUo"
            />
               
            ^
          </pre>
        </div>
      </div>
    </div>
  </div>
</div>
`;
